# maxscale-system-test

./: CMakeLists.txt  README.md  auroramon.cpp  avro.cpp  avro_long.cpp  backend_auth_fail.cpp  bad_pers.cpp  big_load.cpp  big_load.h  big_transaction.h  binary_ps.cpp  binlog_big_transaction.cpp  binlog_change_master.cpp  binlog_incompl.cpp  binlog_semisync.cpp  binlog_semisync_txs1_ss0  blob_test.cpp  blob_test.h  bug143.cpp  bug359.cpp  bug422.cpp  bug448.cpp  bug466.cpp  bug469.cpp  bug471.cpp  bug473.cpp  bug475.cpp  bug479.cpp  bug488.cpp  bug493.cpp  bug495.cpp  bug507.cpp  bug509.cpp  bug516.sh  bug519.cpp  bug526.cpp  bug529.cpp  bug539.cpp  bug547.cpp  bug561.sh  (+248 more)
Hartmut_tests/maxscale-mysqltest/: test.sh
cache/cache_basic/t/: create.test
cache/oltp/: cache_rules.json  oltp_cleanup.sh  oltp_prepare.sh  oltp_run.sh  run_benchmark.sh
cdc_datatypes/: CMakeLists.txt  cdc_datatypes.cpp  cdc_result.cpp  cdc_result.h
cnf/: maxscale.cnf.template.add_server  maxscale.cnf.template.add_service  maxscale.cnf.template.avro  maxscale.cnf.template.avro_compression  maxscale.cnf.template.bad_pers  maxscale.cnf.template.bad_ssl  maxscale.cnf.template.binlog_incompl  maxscale.cnf.template.bug359  maxscale.cnf.template.bug448  maxscale.cnf.template.bug471  maxscale.cnf.template.bug479  maxscale.cnf.template.bug493  maxscale.cnf.template.bug495  maxscale.cnf.template.bug526  maxscale.cnf.template.bug539  maxscale.cnf.template.bug547  maxscale.cnf.template.bug571  maxscale.cnf.template.bug585  maxscale.cnf.template.bug587  maxscale.cnf.template.bug587_1  maxscale.cnf.template.bug601  maxscale.cnf.template.bug620  maxscale.cnf.template.bug643  maxscale.cnf.template.bug643_1  maxscale.cnf.template.bug645  maxscale.cnf.template.bug645_1  maxscale.cnf.template.bug648  maxscale.cnf.template.bug650  maxscale.cnf.template.bug657  maxscale.cnf.template.bug664  maxscale.cnf.template.bug670  maxscale.cnf.template.bug673  maxscale.cnf.template.bug694  maxscale.cnf.template.bug705  maxscale.cnf.template.bug711  maxscale.cnf.template.bug718  maxscale.cnf.template.bug730  maxscale.cnf.template.cache_oltp  maxscale.cnf.template.check_backend  maxscale.cnf.template.config_reload  (+82 more)
fw/: rules11  rules5
fw2/: deny4  pass4  rules4
local_tests/: cleanup_db.sh  install_rpm_local.sh  set_env_local.sh  start_multiple_mariadb.sh
masking/masking_mysqltest/t/: masking_column.test  masking_replace.test  masking_smoke.test
masking/t/: masking_smoke.test
maxscale/java/: CMakeLists.txt  MaxScaleConfiguration.java.in  MaxScaleConnection.java
maxscale/java/batch/: BatchInsert.java  CMakeLists.txt
maxscale/java/prep_stmt/: CMakeLists.txt  PrepStmtTest.java
maxscale/java/test1/: CMakeLists.txt  SimpleConnectorJTest.java
mrm/: config2.toml
session_hang/: run_setmix.sh  simpletest.pl
