# Building test package:
#
#     apt-get install libssl-dev libmariadbclient-dev php5 perl \
#         coreutils realpath libjansson-dev openjdk-7-jdk
#     pip install JayDeBeApi

project(maxscale_system_test)
cmake_minimum_required(VERSION 2.8)
include_directories("/usr/include/mysql/")
set(CTEST_BUILD_NAME "${BUILDNAME}")

# utilities.cmake contains all helper functions and extra tools
include(utilities.cmake)

# Is this needed?
configure_file(${CMAKE_SOURCE_DIR}/cnf/maxscale.cnf.template.setup_binlog.in ${CMAKE_BINARY_DIR}/cnf/maxscale.cnf.template.setup_binlog @ONLY)

# Enable Java
find_package(Java)
if(EXISTS ${Java_JAVA_EXECUTABLE} ${JAVA_JAVAC_EXECUTABLE} ${JAVA_JAR_EXECUTABLE})
  include(UseJava)
  if(Java_FOUND)
    add_subdirectory(maxscale/java/)
  endif()
else()
  message(WARNING "Java not found, Java based tests are not run.")
endif()

# Find the C connector
find_library(MYSQL_CLIENT mariadbclient mysqlclient PATH_SUFFIXES mysql mariadb)

# The core library
add_library(testcore SHARED testconnections.cpp mariadb_nodes.cpp config_check.cpp
  mariadb_func.cpp get_com_select_insert.cpp maxadmin_operations.cpp big_transaction.cpp
  sql_t1.cpp test_binlog_fnc.cpp get_my_ip.cpp big_load.cpp  get_com_select_insert.cpp
  different_size.cpp fw_copy_rules maxinfo_func.cpp)
target_link_libraries(testcore ${MYSQL_CLIENT} z crypt nsl m pthread ssl crypto dl rt jansson)
install(TARGETS testcore DESTINATION system-test)

add_test_executable(avro.cpp avro avro "avrorouter binlogrouter LIGHT")
add_test_executable(backend_auth_fail.cpp backend_auth_fail replication "readconnroute")
add_test_executable(binlog_change_master.cpp binlog_change_master setup_binlog_tx_safe "binlogrouter")
add_test_executable(binlog_incompl.cpp binlog_incompl binlog_incompl "binlogrouter")
add_test_executable(binlog_semisync.cpp binlog_semisync setup_binlog_semisync "binlogrouter HEAVY")
add_test_script(binlog_semisync_txs0_ss0 setup_binlog_semisync_txs0_ss0 "binlogrouter HEAVY")
add_test_script(binlog_semisync_txs0_ss1 setup_binlog_semisync_txs0_ss1 "binlogrouter HEAVY")
add_test_script(binlog_semisync_txs1_ss0 setup_binlog_semisync_txs1_ss0 "binlogrouter HEAVY")
add_test_executable(bug143.cpp bug143 replication "MySQLAuth")
add_test_executable(bug359.cpp bug359 bug359 "CONFIG LIGHT")
add_test_executable(bug422.cpp bug422 replication "readwritesplit readconnroute maxscale")
add_test_executable(bug448.cpp bug448 replication "MySQLAuth LIGHT")
add_test_executable(bug469.cpp bug469 replication "readwritesplit LIGHT")
add_test_executable(bug471.cpp bug471 bug471 "readwritesplit hintfilter")
add_test_executable(bug473.cpp bug473 hints "readwritesplit hintfilter")
add_test_executable(bug475.cpp bug475 hints "readwritesplit hintfilter")
add_test_executable(bug479.cpp bug479 bug479 "CONFIG")
add_test_executable(bug488.cpp bug488 galera "readwritesplit readconnroute maxscale")
add_test_executable(bug493.cpp bug493 bug493 "CONFIG")
add_test_executable(bug495.cpp bug495 bug495 "CONFIG LIGHT")
add_test_executable(bug507.cpp bug507 replication "readwritesplit LIGHT")
add_test_executable(bug509.cpp bug509 galera "readwritesplit")
add_test_executable(bug519.cpp bug519 replication "readwritesplit HEAVY")
add_test_executable(bug526.cpp bug526 bug526 "CONFIG LIGHT")
add_test_executable(bug529.cpp bug529 replication "readwritesplit readconnroute maxscale")
add_test_executable(bug547.cpp bug547 replication "readwritesplit")
add_test_script(bug561.sh replication "MySQLAuth")
add_test_script(bug562.sh replication "MySQLAuth")
add_test_script(bug564.sh replication "MySQLProtocol")
add_test_executable(bug565.cpp bug565 replication "MySQLProtocol")
add_test_script(bug567.sh replication "maxscale")
add_test_executable(bug571.cpp bug571 bug571 "regexfilter")
add_test_executable(bug572.cpp bug572 replication "MySQLAuth")
add_test_script(bug585 bug585 "regexfilter")
add_test_executable(bug587.cpp bug587 bug587 "regexfilter hintfilter")
add_test_script(bug587_1 bug587_1 "regexfilter hintfilter")
add_test_executable(bug592.cpp bug592 replication "MySQLAuth readwritesplit")
add_test_executable(bug601.cpp bug601 bug601 "MySQLAuth MySQLProtocol")
add_test_executable(bug620.cpp bug620 bug620 "MySQLAuth MySQLProtocol")
add_test_executable(bug626.cpp bug626 replication "MySQLAuth MySQLProtocol")
add_test_executable(bug634.cpp bug634 replication "readwritesplit")
add_test_executable(bug643.cpp bug643 bug643 "CONFIG")
add_test_executable(bug643_1.cpp bug643_1 bug643_1 "CONFIG")
add_test_executable(bug645.cpp bug645 bug645 "tee")
add_test_executable(bug645_1.cpp bug645_1 bug645_1 "tee")
add_test_script(bug648 bug648 "tee UNSTABLE")
add_test_executable(bug649.cpp bug649 bug645 "tee UNSTABLE")
add_test_executable(bug650.cpp bug650 bug650 "tee")
add_test_executable(bug653.cpp bug653 replication "MySQLAuth MySQLProtocol")
add_test_executable(bug654.cpp bug654 replication "maxscale")
add_test_executable(bug657.cpp bug657 bug657 "tee UNSTABLE")
add_test_executable(bug658.cpp bug658 replication "readwritesplit readconnroute maxscale")
add_test_executable(bug662.cpp bug662 replication "readwritesplit readconnroute maxscale")
add_test_executable(bug664.cpp bug664 bug664 "MySQLAuth MySQLProtocol")
add_test_executable(bug670.cpp bug670 bug670 "tee UNSTABLE")
add_test_executable(bug673.cpp bug673 bug673 "MySQLAuth")
add_test_executable(bug676.cpp bug676 galera.bug676 "galeramon")
add_test_executable(bug681.cpp bug681 galera.bug681 "CONFIG")
add_test_executable(bug694.cpp bug694 bug694 "readwritesplit")
add_test_executable(bug699.cpp bug699 galera "readwritesplit LIGHT")
add_test_executable(bug705.cpp bug705 bug705 "MySQLAuth")
add_test_executable(bug711.cpp bug711 bug711 "readwritesplit")
add_test_executable(bug729.cpp bug729 replication "readwritesplit LIGHT")
add_test_executable(bug730.cpp bug730 bug730 "regexfilter")
add_test_executable(ccrfilter.cpp ccrfilter ccrfilter "ccrfilter LIGHT")
add_test_executable(cdc_client.cpp cdc_client avro "avrorouter binlogrouter")
add_test_executable(change_master_during_session.cpp change_master_during_session replication "readwritesplit mysqlmon")
add_test_executable(change_user.cpp change_user replication "MySQLAuth MySQLProtocol LIGHT")
add_test_executable_notest(check_backend.cpp check_backend check_backend "CONFIG")
add_test_executable(config_test.cpp config_test replication "CONFIG")
add_test_executable(connect_to_nonexisting_db.cpp connect_to_nonexisting_db replication "MySQLAuth MySQLProtoco LIGHT")
add_test_executable(connection_limit.cpp connection_limit connection_limit "maxscale LIGHT")
add_test_executable(crash_out_of_files.cpp crash_out_of_files load "maxscale HEAVY")
add_test_executable(crash_out_of_files_galera.cpp crash_out_of_files_galera galera "maxscale HEAVY")
add_test_executable(different_size_binlog.cpp different_size_binlog setup_binlog "binlogrouter HEAVY")
add_test_executable(different_size_rwsplit.cpp different_size_rwsplit replication "readwritesplit HEAVY")
add_test_executable(encrypted_passwords.cpp encrypted_passwords replication "maxscale LIGHT")
add_test_executable(failover_mysqlmon.cpp failover_mysqlmon failover_mysqlmon "mysqlmon")
add_test_executable(fwf.cpp fwf fwf "dbfwfilter")
add_test_executable(fwf2.cpp fwf2 fwf "dbfwfilter")
add_test_executable(fwf_actions.cpp fwf_actions fwf_action "dbfwfilter")
add_test_executable(fwf_logging.cpp fwf_logging fwf_logging "dbfwfilter")
add_test_executable(fwf_reload.cpp fwf_reload fwf "dbfwfilter")
add_test_executable(fwf_syntax.cpp fwf_syntax fwf_syntax "dbfwfilter")
add_test_executable(galera_priority.cpp galera_priority galera_priority "galeramon LIGHT")
# Disabled for the time being
# add_test_executable(gatekeeper.cpp gatekeeper gatekeeper "gatekeeper")
add_test_executable(kill_master.cpp kill_master replication "readwritesplit LIGHT")
add_test_executable(load_balancing.cpp load_balancing load "readwritesplit LIGHT")
add_test_executable(load_balancing_galera.cpp load_balancing_galera load_galera "readwritesplit")
add_test_script(load_balancing_galera_pers1 load_galera_pers1 "readwritesplit HEAVY")
add_test_script(load_balancing_galera_pers10 load_galera_pers10 "readwritesplit HEAVY")
add_test_script(load_balancing_pers1 load_pers1 "readwritesplit HEAVY")
add_test_script(load_balancing_pers10 load_pers10 "readwritesplit HEAVY")
add_test_executable_notest(long_sysbench.cpp long_sysbench replication "readwritesplit")
add_test_executable(longblob.cpp longblob longblob "readwritesplit readconnroute UNSTABLE")
add_test_executable(lots_of_rows.cpp lots_of_rows galera "readwritesplit HEAVY")
add_test_script(mariadb_tests_hartmut.sh replication "readwritesplit")
add_test_script(mariadb_tests_hartmut_galera.sh replication "readwritesplit")
add_test_executable(max_connections.cpp max_connections replication "MySQLAuth MySQLProtocol UNSTABLE HEAVY")
add_test_executable(maxinfo.cpp maxinfocpp maxinfo "maxinfo UNSTABLE")
add_test_script(maxinfo.py maxinfo "maxinfo LIGHT")
add_test_executable(maxscale_process_user.cpp maxscale_process_user replication "maxscale LIGHT")
add_test_executable(mm.cpp mm mm "mmmon")
add_test_executable(mm_mysqlmon.cpp mm_mysqlmon mm_mysqlmon "mysqlmon")
add_test_executable(mxs118.cpp mxs118 mxs118 "maxscale LIGHT")
add_test_executable(mxs127.cpp mxs127 mxs127 "readwritesplit LIGHT")
add_test_executable(mxs244_prepared_stmt_loop.cpp mxs244_prepared_stmt_loop galera "readwritesplit readconnroute LIGHT")
add_test_executable(mxs280_select_outfile.cpp mxs280_select_outfile replication "readwritesplit")
add_test_executable(mxs314.cpp mxs314 galera "MySQLProtocol LIGHT")
add_test_executable(mxs321.cpp mxs321 replication "maxscale")
add_test_script(mxs361 mxs361 "maxscale")
add_test_executable(mxs365.cpp mxs365 replication "readwritesplit")
add_test_executable(mxs37_table_privilege.cpp mxs37_table_privilege replication "MySQLAuth LIGHT")
add_test_script(mxs37_table_privilege_galera galera "MySQLAuth")
add_test_executable(mxs431.cpp mxs431 sharding "schemarouter")
add_test_executable(mxs47.cpp mxs47 replication "MySQLProtocol LIGHT")
add_test_executable(mxs501_tee_usedb.cpp mxs501_tee_usedb mxs501 "tee")
add_test_executable(mxs548_short_session_change_user.cpp mxs548_short_session_change_user mxs548 "MySQLProtocol")
add_test_executable(mxs559_block_master.cpp mxs559_block_master mxs559 "readwritesplit")
add_test_executable(mxs564_big_dump.cpp mxs564_big_dump galera_mxs564 "readwritesplit readconnroute")
add_test_script(mxs585.py replication "readwritesplit readconnroute UNSTABLE")
add_test_script(mxs598.py ssl "MySQLProtocol")
add_test_executable(mxs621_unreadable_cnf.cpp mxs621_unreadable_cnf replication "maxscale")
add_test_executable(mxs652_bad_ssl.cpp mxs652_bad_ssl bad_ssl "CONFIG")
add_test_executable(mxs657_restart.cpp mxs657_restart replication "maxscale HEAVY")
add_test_executable(mxs657_restart_service.cpp mxs657_restart_service replication "maxscale")
add_test_executable(mxs682_cyrillic.cpp mxs682_cyrillic replication "maxscale LIGHT")
add_test_script(mxs682_cyrillic_galera galera "maxscale")
add_test_executable(mxs710_bad_socket.cpp mxs710_bad_socket mxs710_bad_socket "CONFIG")
add_test_script(mxs711_two_ports mxs711_two_ports "CONFIG")
add_test_executable(mxs716.cpp mxs716 replication "MySQLAuth LIGHT")
add_test_executable(mxs720_line_with_no_equal.cpp mxs720_line_with_no_equal mxs720_line_with_no_equal "CONFIG")
add_test_executable(mxs720_wierd_line.cpp mxs720_wierd_line mxs720_wierd_line "CONFIG")
add_test_executable(mxs722.cpp mxs722 replication "maxscale LIGHT")
add_test_executable(mxs729_maxadmin.cpp mxs729_maxadmin replication "MaxAdminAuth LIGHT")
add_test_executable(mxs781_binlog_wrong_passwrd.cpp mxs781_binlog_wrong_passwrd setup_binlog "binlogrouter")
add_test_script(mxs791.sh replication "UNSTABLE")
add_test_script(mxs791_galera.sh galera "UNSTABLE")
add_test_script(mxs799_crash_bad_socket mxs799 "CONFIG")
add_test_executable(mxs812_1.cpp mxs812_1 longblob "readwritesplit")
add_test_executable(mxs812_2.cpp mxs812_2 longblob "readwritesplit")
add_test_executable(mxs813_long_hostname.cpp mxs813_long_hostname setup_binlog "binlogrouter")
add_test_executable(mxs822_maxpasswd.cpp mxs822_maxpasswd maxpasswd "maxscale")
add_test_executable(mxs827_write_timeout.cpp mxs827_write_timeout replication "readwritesplit")
add_test_executable(mxs874_slave_recovery.cpp mxs874_slave_recovery mxs874 "readwritesplit")
add_test_executable(mxs922_bad_server.cpp mxs922_bad_server mxs922 "maxscale")
add_test_executable(mxs922_restart.cpp mxs922_restart mxs922 "maxscale")
add_test_executable(mxs922_scaling.cpp mxs922_scaling mxs922_scaling "maxscale")
add_test_executable(mxs951_utfmb4_galera.cpp mxs951_utfmb4_galera galera "galeramon")
add_test_executable(mxs957.cpp mxs957 replication "readwritesplit")
add_test_executable(namedserverfilter.cpp namedserverfilter namedserverfilter "namedserverfilter LIGHT")
add_test_executable(open_close_connections.cpp open_close_connections replication "maxscale")
add_test_script(open_close_connections_ssl ssl "maxscale")
add_test_executable(pers_01.cpp pers_01 pers_01 "maxscale")
add_test_executable(pers_02.cpp pers_02 pers_01 "maxscale")
add_test_executable(prepared_statement.cpp prepared_statement replication "readwritesplit LIGHT")
add_test_executable(readconnrouter_master.cpp readconnrouter_master replication "readconnroute LIGHT")
add_test_executable(readconnrouter_slave.cpp readconnrouter_slave replication "readconnroute LIGHT")
add_test_executable(regexfilter1.cpp regexfilter1 regexfilter1 "regexfilter LIGHT")
add_test_script(run_ctrl_c.sh replication "maxscale LIGHT")
add_test_script(run_session_hang.sh replication "readwritesplit")
add_test_executable(rw_galera_select_insert.cpp rw_galera_select_insert galera "readwritesplit")
add_test_executable(rw_select_insert.cpp rw_select_insert replication "readwritesplit")
add_test_executable(rwsplit_conn_num.cpp rwsplit_conn_num repl_lgc "readwritesplit LIGHT")
add_test_executable(rwsplit_connect.cpp rwsplit_connect replication "readwritesplit LIGHT")
add_test_executable(rwsplit_readonly.cpp rwsplit_readonly rwsplit_readonly "readwritesplit")
add_test_executable(rwsplit_readonly_stress.cpp rwsplit_readonly_stress rwsplit_readonly "readwritesplit HEAVY")
add_test_executable(schemarouter_duplicate_db.cpp schemarouter_duplicate_db schemarouter_duplicate_db "schemarouter")
add_test_executable(script.cpp script script "maxscale")
add_test_executable(server_weight.cpp server_weight galera.weight "readwritesplit readconnroute LIGHT")
add_test_executable(ses_bigmem.cpp ses_bigmem no_ses_cmd_store "readwritesplit")
add_test_executable(session_limits.cpp session_limits session_limits "readwritesplit")
add_test_executable(setup_binlog.cpp setup_binlog setup_binlog "binlogrouter")
add_test_executable(setup_binlog_crc_32.cpp setup_binlog_crc_32 setup_binlog "binlogrouter")
add_test_executable(setup_binlog_crc_none.cpp setup_binlog_crc_none setup_binlog "binlogrouter LIGHT")
add_test_executable(sharding.cpp sharding sharding "schemarouter")
add_test_executable(short_sessions.cpp short_sessions replication "readwritesplit readconnroute")
add_test_script(short_sessions_ssl ssl "readwritesplit readconnroute")
add_test_executable(show_monitor_crash.cpp show_monitor_crash show_monitor_crash "maxscale")
add_test_executable(slave_failover.cpp slave_failover replication.one_slave "readwritesplit")
add_test_executable(sql_queries.cpp sql_queries replication "readwritesplit")
add_test_script(sql_queries_pers1 sql_queries_pers1 "maxscale readwritesplit HEAVY")
add_test_script(sql_queries_pers10 sql_queries_pers10 "maxscale readwritesplit HEAVY")
add_test_script(ssl ssl "maxscale readwritesplit")
add_test_script(ssl_load ssl_load "maxscale readwritesplit")
add_test_script(ssl_load_galera ssl_load_galera "maxscale readwritesplit")
add_test_executable(stale_slaves.cpp stale_slaves replication "mysqlmon")
add_test_executable(sysbench_kill_slave.cpp sysbench_kill_slave replication "UNSTABLE HEAVY")
add_test_executable(temporal_tables.cpp temporal_tables replication "readwritesplit")
add_test_executable(test_hints.cpp test_hints hints2 "hintfilter LIGHT")

# enable after fixing MXS-419
# add_test_executable(mxs419_lots_of_connections.cpp mxs419_lots_of_connections replication)

# TODO: Alter the user_cache test
# add_test_executable(user_cache.cpp user_cache user_cache)

# https://mariadb.atlassian.net/browse/MXS-576 - it is possible to set negative value for
# 'persistpoolmax' without any warning
#add_test_executable(bad_pers.cpp bad_pers bad_pers)

# Disabled until test system supports RDS backends
# add_test_executable(auroramon.cpp auroramon auroramon)

configure_file(templates.h.in templates.h @ONLY)

enable_testing()
include(CTest)
